--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
     "mongoose": "^7.3.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
